app/assets/stylesheets/bootstrap_variable_overrides.css.scss
// boostrap color overrides

// primary, secondary, success, info, warning, danger and the variables for color names are already overridden in m3-theme-light

$body-bg: $background;
$content-bg: $surface;
$body-color: $on-background;
$link-color: $primary;
$text-secondary: $on-surface-muted;
$text-disabled: $on-surface-muted;

// dropdowns
$dropdown-bg: $background;
$dropdown-color: $on-background;
$dropdown-link-color: $on-background;
$dropdown-link-hover-bg: $secondary-container;
$dropdown-link-hover-color: $on-secondary-container;
$dropdown-link-active-bg: $secondary;

// inputs
$input-disabled-bg: $background;
$input-border-color: $outline;
$form-select-indicator-color: $on-background;

$table-border-color: $divider;

// disable rfs
$enable-rfs: false;

// disable carrets
$enable-caret: false;

// other values
$border-radius-base: 12px;

// font stuff
$font-family-sans-serif: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-size-base: 0.875rem; //14px;
$baseLineHeight: 24px;
$line-height-base: 1.3846153846;
$min-contrast-ratio: 3;

$link-decoration: none;

$paragraph-margin-bottom: 0.875rem;

$blockquote-font-size: $font-size-base;

$alert-bg-scale: 0%;

// bootstrap offcanvas overrides
$offcanvas-horizontal-width: 700px;
$offcanvas-border-width: 0px;

// button stuff
$btn-padding-x: 24px;
$btn-border-radius: 20px;
$btn-border-width: 0;

